--- a/MeetingNotes/20170407.md
+++ b/MeetingNotes/20170407.md
@@ -23,9 +23,9 @@ The meeting will take place on the 11th of May 9.00-12.00 (CET),
 Room details have not yet been given.
 
 Actions: 
-Webex will be available (JD) 
-Kuldar will manage the Webex computer (KA)
-As Karin understands it a shuttlebus will go from the db San Antonio to the venue. As soon as more info is available, mails will be sent. (KB)
+- Webex will be available (JD) 
+- Kuldar will manage the Webex computer (KA)
+- As Karin understands it a shuttlebus will go from the db San Antonio to the venue. As soon as more info is available, mails will be sent. (KB)
 
 3.	Introduction to Workplan (Karin)
 
@@ -45,7 +45,7 @@ Make sure a link from DLM webpage to DAS webpage is created (DA)
 Thursday 11th May 2017 8.00 UK time, 9.00 CET, 10.00 EET. Malta
 
 Actions: 
-Read updated workplan and look at the timeplan when distributed. Be ready to comment and commit. (All)
+- Read updated workplan and look at the timeplan when distributed. Be ready to comment and commit. (All)
 
 
 Karin Bredenberg and Janet Delve
