--- a/MeetingNotes/20170511.md
+++ b/MeetingNotes/20170511.md
@@ -1,1 +1,54 @@
+Agenda 11th of May 2017
+
+Welcome to the third meeting of the DAS Board
+
+Present: • Karin Bredenberg (National Archives of Sweden, chair) • Kuldar Aas (National Archives of Estonia) • Gregor Zavrsnik (National Archives of Slovenia) • Krystyna Ohnesorge (Swiss Federal Archives)• Janet Delve (University of Brighton) • David Anderson (observer from DLM Forum) 
+Connected via Webex:• Anders Bo Nielsen (National Archives of Denmark) • Miguel Ferreira (KEEP Solutions) 
+Agenda:
+1.	Gregor Završnik from National Archives of Slovenia was assigned to be the Secretary of the meeting 
+
+2.	CEF (Kuldar presented what it is and why we attend)
+-	Connecting Europe Facility – supports implementation of cross border components that would allow reuse of E-ARK tools in other countries. 
+-	The proposed building block (eArchiving) is worth further discussion (was voted as 2nd most interesting)
+-	It build on top of Eark (tools, specifications…) Establish consultancy, training, dissemination materials, technical editing, formatting specifications…
+-	The scope of the building block is greater than just the DAS board 
+-	DLM Forum is the executable party communicating with EC on behalf of our consortium
+Action:
+-	Work is continuing
+
+3.	Github (Karin)
+-	It is a common and open location for our meeting notes 
+-	We publish all our Work documents there
+-	We can set up working groups that are working on certain projects.
+-	Some specification is still not uploaded. We need to analyze what is missing and create a plan how to update it. Especially:
+o	Specifications
+o	Schemas
+o	Sample files
+
+4.	Work plan (Karin et all)
+-	Karin explained about the team guidelines. We need to grow in numbers, we are not enough people when the work needed is analyzed.
+-	We expect that a Committee Secretary will be provided to us by the DLM board 
+-	Proposed teams (everyone part of at least one team)
+o	SMURF team (need for discussion regarding future implementations) update of the schema
+	Linked open data – will it somehow replace the current standards
+o	Geodata
+	moving away from EAD, let’s just reuse the  ISO 19115 standard
+	Prepare the scope of work to the committee
+o	SIARD 
+	interest to create a Database Archiving interest group
+	SIARD 2.0 replacement issue – they propose a new, not backwards compatible with SIARD 2.0!
+o	Common Specification
+	Goal to continue with dissemination
+	Core work would be to work on the METS profile
+	Further recommendations updating the common specification (the PREMIS part), development agreement, on AIP's, borderlines between Common Spec and SIP, AIP and DIP specs.
+o	SIP /AIP /DIP
+	We need a METS profile for each 3 types
+
+6.	Timeline (Karin)
+We didn't get this far in the agenda.
+7.	AoB
+No AoB
+
+8.	Next meeting
+A doodle will be sent out by Karin. The meeting will occur before the holidays.
 
