--- a/MeetingNotes/20170511.md
+++ b/MeetingNotes/20170511.md
@@ -13,42 +13,50 @@ Agenda:
 -	It build on top of Eark (tools, specifications…) Establish consultancy, training, dissemination materials, technical editing, formatting specifications…
 -	The scope of the building block is greater than just the DAS board 
 -	DLM Forum is the executable party communicating with EC on behalf of our consortium
-Action:
+
+Actions:
 -	Work is continuing
 
 3.	Github (Karin)
 -	It is a common and open location for our meeting notes 
 -	We publish all our Work documents there
 -	We can set up working groups that are working on certain projects.
--	Some specification is still not uploaded. We need to analyze what is missing and create a plan how to update it. Especially:
-o	Specifications
-o	Schemas
-o	Sample files
+
+Actions:
+-	Some specification is still not uploaded. We need to analyze what is missing and create a plan how to update it. Especially; Specifications, Schemas and Sample files
 
 4.	Work plan (Karin et all)
 -	Karin explained about the team guidelines. We need to grow in numbers, we are not enough people when the work needed is analyzed.
 -	We expect that a Committee Secretary will be provided to us by the DLM board 
 -	Proposed teams (everyone part of at least one team)
-o	SMURF team (need for discussion regarding future implementations) update of the schema
-	Linked open data – will it somehow replace the current standards
-o	Geodata
-	moving away from EAD, let’s just reuse the  ISO 19115 standard
-	Prepare the scope of work to the committee
-o	SIARD 
-	interest to create a Database Archiving interest group
-	SIARD 2.0 replacement issue – they propose a new, not backwards compatible with SIARD 2.0!
-o	Common Specification
-	Goal to continue with dissemination
-	Core work would be to work on the METS profile
-	Further recommendations updating the common specification (the PREMIS part), development agreement, on AIP's, borderlines between Common Spec and SIP, AIP and DIP specs.
-o	SIP /AIP /DIP
-	We need a METS profile for each 3 types
+	* SMURF team (need for discussion regarding future implementations) update of the schema
+    * Linked open data – will it somehow replace the current standards
+  * Geodata
+    * moving away from EAD, let’s just reuse the  ISO 19115 standard
+    * Prepare the scope of work to the committee
+  *	SIARD 
+    * interest to create a Database Archiving interest group
+    * SIARD 2.0 replacement issue – they propose a new, not backwards compatible with SIARD 2.0!
+  * Common Specification
+    * Goal to continue with dissemination
+    * Core work would be to work on the METS profile
+    * Further recommendations updating the common specification (the PREMIS part), development agreement, on AIP's, borderlines between Common Spec and SIP, AIP and DIP specs.
+  * SIP /AIP /DIP
+    *	We need a METS profile for each 3 types
+  
+  Actions:
+  - Update the workplan. (KB)
 
 6.	Timeline (Karin)
-We didn't get this far in the agenda.
+- We didn't get this far in the agenda.
+
 7.	AoB
-No AoB
+- No AoB
 
 8.	Next meeting
-A doodle will be sent out by Karin. The meeting will occur before the holidays.
+- Next meeting will be before the holidays. The following meeting will be in co-junction with DLM Forum in Brighton.
+
+Actions:
+- A doodle for the before holiday meeting will be sent out. (KB)
+- A doodle for attendance in Brighton will be sent out. (KB)
 
