--- a/MeetingNotes/20170511.md
+++ b/MeetingNotes/20170511.md
@@ -60,3 +60,5 @@ Actions:
 - A doodle for the before holiday meeting will be sent out. (KB)
 - A doodle for attendance in Brighton will be sent out. (KB)
 
+Gregor Završnik and Karin Bredenberg
+
