--- a/MeetingNotes/20170615.md
+++ b/MeetingNotes/20170615.md
@@ -12,7 +12,7 @@ Members:
 •	David Anderson (observer from DLM Forum)
 •	Krystyna Ohnesorge (Swiss Federal Archives)*
 
-* = apologies
+'*' = apologies
 
 Agenda:
 1.	Secretary of the meeting (Karin)
