--- a/MeetingNotes/20170912.md
+++ b/MeetingNotes/20170912.md
@@ -11,14 +11,14 @@ Present:
 •	David Anderson (observer from DLM Forum) (DA)
 
 Agenda:
-1.	Secretary of the meeting
-2.	AoB to be added?
-3.	Update on CEF (David)
-4.	Workplan (Karin et al)
-5.	Timeline (Karin)
-6.	AoB
-7.	Next meeting
-8.	Start work
+1 Secretary of the meeting
+2 AoB to be added?
+3 Update on CEF (David)
+4 Workplan (Karin et al)
+5 Timeline (Karin)
+6 AoB
+7 Next meeting
+8 Start work
 
 1. Secretary – JA.
 
@@ -27,21 +27,18 @@ a) INSPIRE discussion (GZ)
 b) Relationship between DAS Board and DLM (KA)
 c) OPF (KB)
 
-3. CEF Update. The last meeting with the CEF team was in Brussels. We are now discussing budget / funding modalities / coordination office organisation. There are budgeted funds for specifications / DAS Board. Regardless of how the negotiations goes we need continuity now. Focus – specifications update this year. 
+3. CEF Update. 
+-The last meeting with the CEF team was in Brussels. We are now discussing budget / funding modalities / coordination office organisation. There are budgeted funds for specifications / DAS Board. Regardless of how the negotiations goes we need continuity now. Focus – specifications update this year. 
 We are currently trying to plan engaging experts to undertake the CEF specifications tasks.
 We also have to do the work before and after CEF funding.
-
-We discussed what is the balance between testing and developing the specifications? Develop 2018 then test 2019. There is funding for updating tools, and some for a helpdesk. We need not-for-profit specification services (e.g. certification) in order to maintain them. Same for training etc. The specifications are available for anyone to create their own tools. By the end of 2018 we need to have the testing documentation available. We have a testing of specifications (in Swedish) set of forms from exemplar from Sweden (who hired a consultant for the work). 
-
-We need everyone to use METS the same way, and have the European level, then the national level etc. In case of emergency, one national archive could safeguard SIPs from another national archive if necessary. The receiving archive might not see the specific EAD within the package, but could validate checksums etc. at a high level. 
-
+We discussed what is the balance between testing and developing the specifications? Develop 2018 then test 2019. There is funding for updating tools, and some for a helpdesk. We need not-for-profit specification services (e.g. certification) in order to maintain them. Same for training etc. The specifications are available for anyone to create their own tools. By the end of 2018 we need to have the testing documentation available. We have a testing of specifications (in Swedish) set of forms from exemplar from Sweden (who hired a consultant for the work).
+We need everyone to use METS the same way, and have the European level, then the national level etc. In case of emergency, one national archive could safeguard SIPs from another national archive if necessary. The receiving archive might not see the specific EAD within the package, but could validate checksums etc. at a high level.
 A common specification (CS) for databases is underway, covering SIARD 2.0 and ADD-ML. Accompanying documentation and schemas are necessary to go with these specifications. With common specifications, there is the potential to cover thousands of customised content types. We are focussing initially on e-government needs etc. We need to produce a CS that is reliable and trustworthy, but it will take some time to be taken up etc. However, for the eArchiving Building Block (BB), we need to speed things up…In Sweden the CS is for everyone, but there is a lack of exchange formats for the information types.
-
-(any comments on the DAS Board constitution / website are welcome).  
-
+(any comments on the DAS Board constitution / website are welcome).
 How would Switzerland (and eventually the UK) be involved? DLM expects to be tasked to hire experts, and they will organise this. We discussed the Slovenian and KEEPs input.
 
-4. Workplan (KB) 
+4. Workplan (KB). 
+ERMS (KB)
 Karin updating, then will send to JA for editing. KO asked about using METS? KB. No, that is just for the package. This specification is based on: MoReq, E-ARK output which is based on MoReq2010, the schemas of particularly MoReq 2 (as it is hard to get schema elements from MoReq2010), and the Swedish tax office. In the process the types have been rationalised (E-ARK had 30 different formats!). ABN – there are lots of different ways of doing Records Management – how do we cover this? KB – MoReq covers this with the modularity which also is being implemented in the updated specification. ABN – users always want more access than provided, so what about EAD3. KB yes, this is taken care of in the new version (so we can extend and include special elements etc., extension schemas etc). 
 
 Geodata (GZ)
