--- a/MeetingNotes/20171205.md
+++ b/MeetingNotes/20171205.md
@@ -17,24 +17,24 @@ Agenda:
 1. Secretary – KB.
 
 2. AOB:
-a) Website (KA)
-b) Website accessibility (DA, KA)
+- a) Website (KA)
+- b) Website accessibility (DA, KA)
 
 
 3. Name, after discussion the new name will be “Digital Information LifeCycle Interoperability Standards Board (DILCIS Board)”.
 Action points:
--KB informs Zoltan
--KB updates the GitHub title name, the repository will have the old name
--DA gets the domain
--DA + KA makes sure re-pointers to the new name from the old one setup.
+- KB informs Zoltan
+- KB updates the GitHub title name, the repository will have the old name
+- DA gets the domain
+- DA + KA makes sure re-pointers to the new name from the old one setup.
 
 4. CEF Update. Meetings will take place during the end of this week with the CEF team in Brussels. There preparations for the coming work will be done.
 
 5. Work plan. Deadline extended to the 31st of January 2018. In the Google Drive documents to aid the work are added by KB. The current work plan as a Word-document to be able to copy from and a document named “DAS Board work plan and timing.docx” where you can see how it’s thought to be done and also dependencies. Please add your work plan in this document. Teams will be setup in Github for the different tasks.
 
 6. AOB
-a) KA has updated the website. Look at it and also submit texts for the part you are responsible for!
-b) There are issues with accessing the webpage. DA will check that the fee for the name has been paid.
+- a) KA has updated the website. Look at it and also submit texts for the part you are responsible for!
+- b) There are issues with accessing the webpage. DA will check that the fee for the name has been paid.
 
 7. Next meeting will be on Tuesday the 6th of February at the usual time 9.00/10.00/11.00
 
