--- a/MeetingNotes/20180530.md
+++ b/MeetingNotes/20180530.md
@@ -1,4 +1,4 @@
-Agenda 30th of May 2018
+Agenda and notes 30th of May 2018
 
 Welcome to the meeting of the DILCIS Board!
 
@@ -9,74 +9,80 @@ Members:
 •	Kuldar Aas (National Archives of Estonia)
 •	Janet Anderson (University of Brighton)
 •	Gregor Zavrsnik (National Archives of Slovenia)
-•	Krystyna Ohnesorge* (Swiss Federal Archives)
 •	Sven Schlarb (Austrian Institute of Tehnology)
 •	David Anderson (observer from DLM Forum)
 Extending guests A2 E-ARK CEF: 
 •	Jaime Kaminski (DLM)
 •	Karin Oolu (DLM)
-•	National Archives of Norway (Hans Fredrik Berg*, Ole Gausdal*, Arne-Kristian Groven, Ane Hovdan)
-•	Bundesarchiv (Sebastian Gleixner, Sina Westphal*)
+•	National Archives of Norway (Arne-Kristian Groven, Ane Hovdan)
+•	Bundesarchiv (Sebastian Gleixner)
 •	Carl Wilson (A3, OPF) (From 3.20 pm)
-(* Regrets)
+Apologies:
+•	Krystyna Ohnesorge (Swiss Federal Archives)
 
-Agenda:
-1.	Secretary of the meeting
+Agenda and notes:
+1.	Secretary of the meeting - JA
+
 2.	Welcome to special guests: Bundesarchiv, National Archives of Norway, Jaime, Karin, Carl 
+
 3.	Who are we?!
+
 4.	AoB to be added?
+- AoB – Review DILCIS Board rules and principles (especially re. electing new members etc.)
+
 5.	Latest news on CEF (David)
-6.	Finalizing the workplan (Karin) 
-7.	SIARD (Anders Bo + Krystyna)
-8.	CS IP (Kuldar)
-9.	Ca 16.00 package validation discussion with A3, OPF and Carl Wilson
-10.	Next meeting
-Coffee when we start and at 15.30
-Lunch at 12.00
-Karin Bredenberg and Janet Anderson
-Minutes
-1.	Attendees
-2.	AOB – Review DILCIS Board rules and principles (especially re. electing new members etc.)
-3.	CEF update
-4.	The Workplan
-a.	E-ARK CEF Specifications Activity 2.
-Q MF, is it E-ARK specifications? What is the brand name?
-A. Want E-ARK as the long-term brand, perhaps for a Knowledge Centre, like INTER-PARES. Action: All we need to build the brand – logo, name etc.
-b.	Emphasise CS for Information Packages. This will be of interest to Asian colleagues.
-c.	Milestones table. Way point in Month 6. Drafts available end November for consultation (just after Vienna DLM meeting where there will be a E-ARK  CEF event). Need to extend specifications – new specifications such as economics and medical. Also consider local implementations, which is an issue for the Spanish scenario with the “Archive” tool which is tightly regulated and includes digital signatures. We would look for a common core between the CS for IPs and “Archive” and then consider add-on modules for Spain. There needs to be a real balance between local details and the general core – so we need a balance between generalization and specialization. In Sweden they have built on the CS for IP, which is the core – they have not used the SIP, AIP or DIP. 
-d.	Workplan update. Need to go from project to programme to usable, updatable specifications. We need to number the specifications. Months 1-3 mainly Karin, beginning the stabilising work, and we cannot pass specifications on to A3 until they are in a suitable state (KEEPS and AIT to support here. Also, using the Schematron will help here.)
-e.	Partner / PM / task plan. Carl and Kuldar (and KEEPS, DNA, AIT) will be bridges into Activity 3. No Swiss or UK allowed in the project, so we will be involving the SFA as closely as possible (SIARD 2.1 nearly ready), and agree on releases and any deviations from Core SIARD. We could look at how to package SIARD together with the CS for IP. The approach for splitting large files has already been agreed.
-f.	WE NEED TO GET TO WORK NOW! Action: All Everyone needs a Github account. All the info is on Github (note Github is for finished work, not work in progress). Meeting notes are on Github. The sub groups can put their material there too. We need to use the issue tracker, so folk should create issues, and then everyone can discuss. Action: All We need to change the logos etc. Material currently on the Google drive Action: Add new members to the google drive – send Karin and Janet your google compatible email address. The website needs updating, so need content from folk. Action: All Please look at the webpage and tell Karin, Kuldar and David what is missing. We need to decide on communication tools, in harmony with E-ARK CEF (google, webex, Zoom (40 minutes max), EasyRTC?? Etc.)   
+- David gave us the latest news
+
+6.	Finalizing the workplan (Karin)
+- Extended with more information than just the workplan.
+- a.	E-ARK CEF Specifications Activity 2.
+  Question: MF, is it E-ARK specifications? What is the brand name? Answer: Want E-ARK as the long-term brand, perhaps for a Knowledge Centre, like INTER-PARES. 
+- Action: All we need to build the brand – logo, name etc.
+- b.	Emphasise CS for Information Packages. This will be of interest to Asian colleagues.
+- c.	Milestones table. Way point in Month 6. Drafts available end November for consultation (just after Vienna DLM meeting where there will be a E-ARK  CEF event). Need to extend specifications – new specifications such as economics and medical. Also consider local implementations, which is an issue for the Spanish scenario with the “Archive” tool which is tightly regulated and includes digital signatures. We would look for a common core between the CS for IPs and “Archive” and then consider add-on modules for Spain. There needs to be a real balance between local details and the general core – so we need a balance between generalization and specialization. In Sweden they have built on the CS for IP, which is the core – they have not used the SIP, AIP or DIP. 
+- d.	Workplan update. Need to go from project to programme to usable, updatable specifications. We need to number the specifications. Months 1-3 mainly Karin, beginning the stabilising work, and we cannot pass specifications on to A3 until they are in a suitable state (KEEPS and AIT to support here. Also, using the Schematron will help here.)
+- e.	Partner / PM / task plan. Carl and Kuldar (and KEEPS, DNA, AIT) will be bridges into Activity 3. No Swiss or UK allowed in the project, so we will be involving the SFA as closely as possible (SIARD 2.1 nearly ready), and agree on releases and any deviations from Core SIARD. We could look at how to package SIARD together with the CS for IP. The approach for splitting large files has already been agreed.
+- f.	WE NEED TO GET TO WORK NOW! Action: All Everyone needs a Github account. All the info is on Github (note Github is for finished work, not work in progress). Meeting notes are on Github. The sub groups can put their material there too. We need to use the issue tracker, so folk should create issues, and then everyone can discuss. Action: All We need to change the logos etc. Material currently on the Google drive Action: Add new members to the google drive – send Karin and Janet your google compatible email address. The website needs updating, so need content from folk. Action: All Please look at the webpage and tell Karin, Kuldar and David what is missing. We need to decide on communication tools, in harmony with E-ARK CEF (google, webex, Zoom (40 minutes max), EasyRTC?? Etc.)   
 5.	SIARD.
-a.	Management of issuing new standards
-b.	Managing separate specifications if necessary (e.g. like SIARD DK)
-c.	Issues with current standard, e.g. minor box handling, interpretations, do this on Github – in English and translated into German and French. Work with KOST on this – we just need to agree how we are doing this. 
-d.	We have DBPTK and SIARD Suite – we need to look inside the format – relations to the S/W tools in CEF. There may be problems regarding size (splitting spanning issues for LOBs, BLOBs, and IP packages). 
-e.	National Archives of Norway (Arne-Kristian Groven) to contribute this work
-f.	Make available tiny corpus of databases and their SIARD equivalents (example corpus).
+- a.	Management of issuing new standards
+- b.	Managing separate specifications if necessary (e.g. like SIARD DK)
+- c.	Issues with current standard, e.g. minor box handling, interpretations, do this on Github – in English and translated into German and French. Work with KOST on this – we just need to agree how we are doing this. 
+- d.	We have DBPTK and SIARD Suite – we need to look inside the format – relations to the S/W tools in CEF. There may be problems regarding size (splitting spanning issues for LOBs, BLOBs, and IP packages). 
+- e.	National Archives of Norway (Arne-Kristian Groven) to contribute this work
+- f.	Make available tiny corpus of databases and their SIARD equivalents (example corpus).
 6.	The CS for IP.
-a.	Update: DAS Board to DILCIS Board example of editorial changes. General chapter structure is still fine. Jaime Kaminski to provide general editorial support.
-b.	Action: KB remove SMURF folder from Github as this will no longer be used.
-c.	Action: KA ensure images are editable. 
-d.	Action: KB et al.  We need to get a logo for the specifications.
-e.	We bear in mind that by their very nature, specifications are always evolving.
-f.	There were some changes regarding mandatory / optional etc. (would / should / could).
-g.	Numbering changes. Also, what do mean by “requirement 1.1”? This needs to be consistently handled across all our documentation. We could name these “principles” with prefixes.
-h.	????
-i.	METS – which are METS reserved terms and which are E-ARK custom terms? 
-j.	Cardinality – ensure everyone understands what is meant by this (1:1, 0:n, m:n etc.) 
-k.	Discussion re. the Content Information Type Specification Name – should there be a list here? This should maybe in the SIP specification and referenced here? How does the “Other” function? This list belongs to the Representation level. This is critical to decide on soon. Action: KA – create a Github issue.  This is a key issue. 
-l.	Full example of METS root element – needs XML NAMESPACE (xmlns) (suggest csip). Discussion of METS schema etc. – necessary for validators etc. We want to reinforce our rules with the help of Schematron.
-m.	Big change – note element can be assigned a type, e.g. phone number. 
-n.	Groups have been added. Wraps also. Updated example. Basic rights element at a high level (cf Europeana). Action: KB rewrite the Basic rights list (cf Europeana, CEF, Rights statements website Rightsstaements.org for Cultural Heritage) (We will be recommending optional rights statements just like we recommend PREMIS for provenance).
-o.	fileSec discussion.
-p.	structMap. We have added that this is the only element required by METS. Review structMap element at the 6-month review in E-ARK CEF A2. 
-q.	Work on updates until September. There have been update requests already. Action: Sebastian / Ane / Arne-Kristian –Please report to KB what you need to see in the CS for IP.  (Budesarchiv looking to update their IPs – nestor will have an SIG in this area).
-r.	Meeting to discuss CS IP Introductory Walkthrough Tuesday 12th June 9.00 – 11.00 CEST. (Action KA: Mention to others in A3, ask José B to mention to relevant people). (Action: JA test webex with Sebastian and Ane and any others). 
+- a.	Update: DAS Board to DILCIS Board example of editorial changes. General chapter structure is still fine. Jaime Kaminski to provide general editorial support.
+- b.	Action: KB remove SMURF folder from Github as this will no longer be used.
+- c.	Action: KA ensure images are editable. 
+- d.	Action: KB et al.  We need to get a logo for the specifications.
+- e.	We bear in mind that by their very nature, specifications are always evolving.
+- f.	There were some changes regarding mandatory / optional etc. (would / should / could).
+- g.	Numbering changes. Also, what do mean by “requirement 1.1”? This needs to be consistently handled across all our documentation. We could name these “principles” with prefixes.
+- h.	????
+- i.	METS – which are METS reserved terms and which are E-ARK custom terms? 
+- j.	Cardinality – ensure everyone understands what is meant by this (1:1, 0:n, m:n etc.) 
+- k.	Discussion re. the Content Information Type Specification Name – should there be a list here? This should maybe in the SIP specification and referenced here? How does the “Other” function? This list belongs to the Representation level. This is critical to decide on soon. Action: KA – create a Github issue.  This is a key issue. 
+- l.	Full example of METS root element – needs XML NAMESPACE (xmlns) (suggest csip). Discussion of METS schema etc. – necessary for validators etc. We want to reinforce our rules with the help of Schematron.
+- m.	Big change – note element can be assigned a type, e.g. phone number. (In METS version coming during 2018)
+- n.	Groups have been added. Wraps also. Updated example. Basic rights element at a high level (cf Europeana). Action: KB rewrite the Basic rights list (cf Europeana, CEF, Rights statements website Rightsstaements.org for Cultural Heritage) (We will be recommending optional rights statements just like we recommend PREMIS for provenance).
+- o.	fileSec discussion.
+- p.	structMap. We have added that this is the only element required by METS. Review structMap element at the 6-month review in E-ARK CEF A2. 
+- q.	Work on updates until September. There have been update requests already. Action: Sebastian / Ane / Arne-Kristian –Please report to KB what you need to see in the CS for IP.  (Budesarchiv looking to update their IPs – nestor will have an SIG in this area).
+- r.	Meeting to discuss CS IP Introductory Walkthrough Tuesday 12th June 9.00 – 11.00 CEST. (Action KA: Mention to others in A3, ask José B to mention to relevant people). (Action: JA test webex with Sebastian and Ane and any others). 
 Meeting to discuss CS IP Github issues Monday 2nd July 14.00 – 16.00 CEST.  
-s.	Where do we put this and do we protect it? Give out the PDF and accept comments on these.
-t.	Re-organise the google drive DILCIS Board folder.
+- s.	Where do we put this and do we protect it? Give out the PDF and accept comments on these.
+- t.	Re-organise the google drive DILCIS Board folder.
 AOB.
 Next F2F DLM Forum Vienna 28th November 9.00 – 12.30
 Carl Wilson – validation discussion.
-Number of rules? Mandatory / optional? Schematron? It is hard to refer to the CS IP at the moment – it is a little too free form currently. Sven – we do not start from zero – java, python libraries, numbered requirements, so we can track changes. An API would be nice. Would like to have a basic prototype validator ready for the end of August (web portal – upload zip package). It will give a small sample of the stages as we see them. Reporting will be the most difficult part – meaningful error messages are vital. Decision point – between August and end November – we need DILCIS Board feedback.
+7. Next meeting
+- Well use the in agenda item 6 dates as the next meetings since focus is CS IP.
+8.	Package validation discussion with A3, OPF and Carl Wilson
+- Number of rules? 
+- Mandatory / optional? 
+- Schematron? 
+- It is hard to refer to the CS IP at the moment – it is a little too free form currently. 
+- Sven – we do not start from zero – java, python libraries, numbered requirements, so we can track changes. An API would be nice. 
+- Would like to have a basic prototype validator ready for the end of August (web portal – upload zip package). It will give a small sample of the stages as we see them. 
+- Reporting will be the most difficult part – meaningful error messages are vital. 
+- Decision point – between August and end November – we need DILCIS Board feedback.
