--- a/MeetingNotes/20180905.md
+++ b/MeetingNotes/20180905.md
@@ -24,24 +24,24 @@ Extending guests A2 E-ARK4ALL:
 Review the use of the attribute @CONTENTTYPESPECIFICATION, which content type we are describing in this IP no matter the type of IP. The problem is that we have the values mixed in 9. OTHER in the list. PT describes his comment, but it only moves the problem down to the representation level. MF proposes that we should decide first if it will be closed vocabulary or open text? Problem will be put on hold as the next issue is tied also on this. 
 - b.	https://github.com/DILCISBoard/E-ARK-CSIP/issues/10
 @CONTENTTYPESPECIFICATION – on the CSIP we still say what the list is. KB describes example from SWE: Since we have the fixed list and all the different types of IP-s, 99% of the cases it will be using the value which has been added to Other, then I need to use other CT attributes and there I give the information we have. So, the attributes should be mandatory, and the list we have, if we are supposed to have a list, it’s going to be for the profiles for the SIP, AIP, DIP.
-Discussion of problematic sides of open or closed attributes takes place, everybody should be able to implement the list and the list should be maintained and updated, similarities with EAD will be discussed, also technical perspectives by MF described, example from DNA. 
+Discussion of problematic sides of open or closed attributes takes place, everybody should be able to implement the list and the list should be maintained and updated, similarities with EAD were discussed, also technical perspectives by MF described, example from DNA. 
 No conclusion. We can have closed vocabularies in a way a closed vocabulary helps producers to organise their data, but on the other side it makes it a lot harder to organise information and send it to archive, because they have to package it in the way that complies to the vocabulary. 
-KB: We have the type attribute, which today is open and suggested to be a fixed list in implementation, but we don’t have a fixed list for our SIP, AIP, DIP. That’s an issue we also need to look into. 
+KB: We have the type attribute, which is open and suggested to be a fixed list in implementation, but we don’t have a fixed list for our SIP, AIP, DIP. That’s an issue we also need to look into. 
 - c.	https://github.com/DILCISBoard/E-ARK-CSIP/issues/63
 Administrative section + rights metadata. At the moment we recommend a simple use and we state some values in our text, but we need to say to people how they are supposed to express these values in the rights metadata, going through using the right schema, (available through METS board, one coming from Europeana). We somehow need to show people which rules to use, not just say to use a simple value. The use case is quite clear everywhere, but the issue here is that we recommend the simple use but we don’t say anything more. 
-JA Q about (Exchange format of rights metadata) between PREMIS, METS and Europeana on the rights metadata.  Europeana have it on their own way, in PREMIS we have rights md and we can use that part, for METS we have simple METS schema. 
+JA Q about exchange format of rights metadata between PREMIS, METS and Europeana. Europeana has it on their own way, in PREMIS we have rights md and we can use that part, for METS we have simple METS schema. 
 GZ Q: Are these rules going to be as the content within the package or above the package? KB: it depends on the implementation you are using. MF comments the Q. 
 Decision: We will extend that requirement in spec and add the way of doing it, add PREMIS rights part, METS rights schema and Europeana. To add couple of examples should be fine. KB adds the comment to GH and other are welcome to add comments after reading KB-s. 
 - d.	https://github.com/DILCISBoard/E-ARK-CSIP/issues/83
 Issue regarding to StructMap, the chapter is written not easy way to understand, it was decided we should remove the complex struct map and have more simpler one in Tallinn meeting, HS has added solution from KeepS using it. 
 We need to talk about struct map on the highest level in the CSIP, what we expect everybody to implement. We have three mandatory ways of describing of how the content is structured: struct map, file section and fixed folder structure. These are mandatory when using CSIP. We need to decide whether you need to use all these three or should it be possible to choose which one to implement if you are not taking the E-ARK SIP?  Denmark has not implemented METS yet. KB shares experience from SWE. It’s going to  be unpleasant one way or the other. 
 Decision needs to be made. KB suggests if we could loosen up the requirement and say that struct map is voluntary, SIP we might say is mandatory. ABN shares experience from Denmark. 
-KB: Our biggest issue is last week of November. We do have our profile on the way, JK is looking the language. We will be able to finish that within this week. KB is going to make some suggestions in a separate copy of the profile, so we can see the simple struct map and compare the two, if not too many meetings next week.  
+KB: Our biggest issue is last week of November. We do have our profile on the way, JK is looking through the language. We will be able to finish that within this week. KB is going to make some suggestions in a separate copy of the profile, so we can see the simple struct map and compare the two, if not too many meetings next week.  
 - e.	https://github.com/DILCISBoard/E-ARK-CSIP/issues/85
-The ID is used for validation in Keep solutions, but how others do it? Struct map is the only mandatory element in METS. We need to use it in the best way possible. HS wants to keep it, when they do the validation. Is there another way that pin point could be done? It depends totally on implementation. 
+The ID is used for validation in KeepS, but how others do it? Struct map is the only mandatory element in METS. We need to use it in the best way possible. HS wants to keep it, when they do the validation. Is there another way that pin point could be done? It depends totally on implementation. 
 Issue will be leaved open. Overall pictures of CSIP, all elements, that can have, must have an ID. If we say they are mandatory. More investigation needed.
 - f.	https://github.com/DILCISBoard/E-ARK-CSIP/issues/116
-Should Ch5 present also the elements/attributes which are not allowed/ recommended to be used in CS IP? Rather not, at the moment they have listed with saying we don’t recommend to use. Maybe put them to appendix? ABN: not to be forbidden, but just not to recommend, we may need them in future, better do it item by item. MF Q to CW: Packages should be METS compliant? If we don’t recommend using certain element, if that element appears in the package should the validation procedure make that a mistake or ignore it? If it’s METS compliant, then we shouldn’t forget them, its and implementation issue and compliant with. CW agrees. 
+Should Ch5 present also the elements/attributes which are not allowed/ recommended to be used in CSIP? Rather not, at the moment they have listed with saying we don’t recommend to use. Maybe put them to appendix? ABN: not to be forbidden, but just not to recommend, we may need them in future, better do it item by item. MF Q to CW: Should packages be METS compliant? If we don’t recommend using certain element and if that element appears in the package, should the validation procedure make that a mistake or ignore it? If it’s METS compliant, then we shouldn’t forget them, its and implementation issue and compliant with. CW agrees. 
 KB suggests using cardinality. Issue we have with cardinality when you describe the METS profile you should or should not/ must or must not options, requirement. 
 MF: For the elements that are must - we should state that; the ones that’s we recommend - we also include with cardinality of 0 or more; the others we need to miss - we don’t talk about them at all. CW strongly agrees. Makes the document much easier to read. 
 KB: Not include elements that we don’t give any requirements. If you want to use other elements of METS, please read the METS spec and find out. We’re not going to put these to appendix. 
@@ -50,10 +50,10 @@ To distinguish high level principles from "implementable" requirements, the "gen
 KB: If that’s really implementable and we really can test it, then its requirement. If we can’t test it, not testable, then it’s a principle. 
 - Recap of all issues and conclusions: 
 Issues no 6 ad 10 are sort of the same issue, if we have the fixed list or not and have to decide on what level the list will be fixed. There are more issues related in github we need to consider. We need to go through all pros and cons of the fixed list and also of the list or not. 
-No 63 what we need to do on highest level, is that we need to tell to people how do you use rights metadata and also give examples on metadata schemas they can use if they don’t have their own.  
+No 63 On highest levelwe need to tell to people how to use rights metadata and also give examples on metadata schemas they can use if they don’t have their own.  
 No 83 and 85 are related and need an example to proceed. Struct map - common understanding is that we need a simple struct map. Most important is to reflect the hierarchy; we need an example to look at.
 No 116 - if we don’t use it we don’t have it. We state that METS standard have other elements, please use that, we don’t explain that to you. 
-Last one no 118: If you can’t test it, it’s a principle, if you can test it, it’s a requirement. 
+No 118: If you can’t test it, it’s a principle; if you can test it, it’s a requirement. 
 We have decision 63, 116 and 118, other issues we need to look for some more. 
 - Homework from last week - In the description and if this info goes to the specification should we use the element name from the standard or should use the elements name to make it easier to people? Last time we kind of agreed to use the elements name, at least human-friendly names.
  How many user groups who don’t know the METS? 
