--- a/MeetingNotes/20180905.md
+++ b/MeetingNotes/20180905.md
@@ -5,7 +5,7 @@ Minutes
 •	Miguel Ferreira (KEEP Solutions)
 •	* Kuldar Aas (National Archives of Estonia)
 •	Janet Anderson (University of Brighton)
-•	Gregor Zavrsnik (National Archives of Slovenia)
+•	Gregor Zavrsnik (Geoarh)
 •	* Krystyna Ohnesorge (Swiss Federal Archives)
 •	Sven Schlarb (Austrian Institute of Tehnology)
 •	David Anderson (observer from DLM Forum)
