--- a/MeetingNotes/20180912.md
+++ b/MeetingNotes/20180912.md
@@ -11,12 +11,12 @@
 •	Carl Wilson (A3, OPF)
 2.	Text
 - KB introduces documents sent preliminary for the meeting. Lot of questions needs an answer to solve or think about. Examples of METS schemas were shown. SS suggest to shorten the titles of @CONTENTTYPESPECIFICATION and  @OTHERCONTENTTYPESPECIFICATION  or find technical acronym. KB opens an issue in GH. At the moment we are specifying very low level detail in very high level specification. GZ gives an example of geodata, we expect to have 80% packages with mixed content. MF: The problem is that we are specifying things that are in representation level at the package level.  If we say @CONTENTTYPESPECIFICATION is database, we expect that all representations in the package are databases, in any particular format. It means we need broader terms in @CONTENTTYPESPEC like database or images or mixed (mixed we really don’t know what kind of content we have in representation, an image, website, database or else mixed) . 
-- All agree on that. 
-- MF repeats that OTHER and MIXED are very different concepts. OTHER means not controlled vocabulary. MIXED means we have several content types mixed together in the same representation. It may be a huge mixed package and we have no idea what’s inside of it. ABN, SS gives examples and discusses how to validate if the content will be mixed later. That is why we should have this attribute on the level of representation, not in the level of package. Validation is done per file. 
-- KB explains that in the CS-IP we state that we can use type CONTENTTYPESPEC, but we do not give any value list on the higher level, we want that to be closer to the content itself. In the Profile for SIP, AIP, DIP we need to say how to do that. KB shows where exactly in the METS we state that this particular package, for example, is for AIP.  MF: we need an attribute what says what kind of content type we have in the package,  e.g database, and we have to have an extension point, like smth else that is not in the vocabulary and we call it that. Mixed types means, that once the package is mixed, everything is mixed. 
-- KB renews this document so it is easier to discuss further. Agreed by all. 
+All agree on that. 
+MF repeats that OTHER and MIXED are very different concepts. OTHER means not controlled vocabulary. MIXED means we have several content types mixed together in the same representation. It may be a huge mixed package and we have no idea what’s inside of it. ABN, SS gives examples and discusses how to validate if the content will be mixed later. That is why we should have this attribute on the level of representation, not in the level of package. Validation is done per file. 
+KB explains that in the CS-IP we state that we can use type CONTENTTYPESPEC, but we do not give any value list on the higher level, we want that to be closer to the content itself. In the Profile for SIP, AIP, DIP we need to say how to do that. KB shows where exactly in the METS we state that this particular package, for example, is for AIP.  MF: we need an attribute what says what kind of content type we have in the package,  e.g database, and we have to have an extension point, like smth else that is not in the vocabulary and we call it that. Mixed types means, that once the package is mixed, everything is mixed. 
+KB renews this document so it is easier to discuss further. Agreed by all. 
 - Struct map. KB shows simple example of StructMap full xml. Struct map is the only mandatory element in METS. The problem is that we need to state if you don’t have the suggested folder structure you need to do this or you need to do it on the file section. Which of the options are possible to validate? Several questions discussed about struct map technical details, use cases were analysed, also validation details. Q left open either relative or absolute, we haven’t got any agreement.
-- KB and KA will rebuild the struct map. KB is going to update the document what was agreed in regards to @CONTENTTYPE and continue to simplify the struct map 1:07
+KB and KA will rebuild the struct map. KB is going to update the document what was agreed in regards to @CONTENTTYPE and continue to simplify the struct map 1:07
 - CW Q about specification versions. KB: the first version we are going to give out to DILCIS board is going to be version 2. KA eark final version will be 1.0 . I also prefer 2 and 0. MF suggests to think about how we change versions. By the Vieanna meeting in Nov Istvan is intending to come up with the release planning document, with minor or major versions of impact. 
 3.	Next meeting Sep 19th. After that there will be iPRES in Boston. 
 - Notes by: Karin Oolu
