--- a/MeetingNotes/20180912.md
+++ b/MeetingNotes/20180912.md
@@ -1,3 +1,5 @@
+Minutes
+
 1.	Attendees (mark absence with a * in the list)
 •	Karin Bredenberg (National Archives of Sweden, chair)
 •	Anders Bo Nielsen (National Archives of Denmark)
