--- a/MeetingNotes/20180912.md
+++ b/MeetingNotes/20180912.md
@@ -1,6 +1,6 @@
 Minutes
 
-1.	Attendees (mark absence with a * in the list)
+1.	Attendees 
 •	Karin Bredenberg (National Archives of Sweden, chair)
 •	Anders Bo Nielsen (National Archives of Denmark)
 •	Miguel Ferreira (KEEP Solutions)
