--- a/MeetingNotes/20180912.md
+++ b/MeetingNotes/20180912.md
@@ -7,7 +7,7 @@ Minutes
 •	Kuldar Aas (National Archives of Estonia)
 •	Janet Anderson (University of Brighton)
 •	Gregor Zavrsnik (Geoarh)
-•	Ane Hovden (National Archives of Slovenia)
+•	Ane Hovden (?)
 •	Sven Schlarb (Austrian Institute of Tehnology)
 •	Karin Oolu (DLM)
 •	Carl Wilson (A3, OPF)
